work in progress

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="unoScore/unoScore.html"><i class="fas fa-pencil-alt"></i>Uno score</a>
       </div>
       <div class="card four">
-        <a href="hangman/hangman.html"><i class="fas fa-h-square"></i>Hangman</a>
+        <a href="hangman/hangman.html"><i class="fas fa-h-square"></i>Hangman (work in progress)</a>
       </div>
 
 
